solucionado el problema del impar